[FIX] web: fix the properties field in dark mode
Purpose
=======
Fix the properties types image that should be light and not dark
in dark mode. Fix the background color of the selection options.

Change the background image used for property types to a real image tag,
so we can apply a CSS filter on it for the dark mode (instead of
duplicating all images).

Task-3117416
See odoo/enterprise/pull/35408

X-original-commit: 4982735c5a28b6f4a2d870eb679f9b8f2bfdb5d4

--- a/addons/web/static/src/views/fields/properties/properties_field.scss
+++ b/addons/web/static/src/views/fields/properties/properties_field.scss
@@ -12,7 +12,13 @@
     .o_dropdown_button,
     .o_datepicker_button {
         @include print-variable(o-input-border-color, $o-form-lightsecondary);
+    }
+    .o_dropdown_button,
+    .o_datepicker_button {
         color: initial !important;
+    }
+    .o_input_dropdown {
+        color: $o-main-text-color !important;
     }
 
     & {
